continues basic styling, adds color

--- a/style.css
+++ b/style.css
@@ -12,7 +12,20 @@ main {
   grid-template-rows: 1fr 6fr 1fr;
 }
 
+.game-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.start-game,
+.reset-game {
+  font-size: 18px;
+  padding: 2px;
+}
+
 .top-navigation-container {
+  background-color: #9d9171;
   border-bottom: solid 1px black;
   display: flex;
   flex-direction: row;
@@ -26,13 +39,30 @@ main {
   grid-template-columns: 1fr 3fr;
 }
 
+.game-instruction-container {
+  background-color: #AB4E68;
+}
+
 .bottom-navigation-container {
-  
+  background-color: #B07156;
 }
 
 .title-game {
-  height: 75px;
+  background-color: #c4a287;
   font-size: 75px;
+  height: 75px;
+
+}
+
+.round-display {
+  display: flex;
+ /* flex-direction: column;*/
+  justify-content: center;
+  align-items: center;
+}
+
+.round-display p {
+  font-size: 35px;
 }
 
 .game-question-table {
