--- a/style.css
+++ b/style.css
@@ -6,15 +6,44 @@
 
 
 
+
 main {
   background-color: lightblue;
   display: grid;
   grid-template-rows: 1fr 6fr 1fr;
 }
 
+
+
+.start-screen {
+  height: 500px;
+  width: 500px;
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  z-index: 1;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+
+}
+
 .hidden {
   display: none;
 }
+
+.name-input,
+.start-button {
+  width: 50%;
+  margin: 5px;
+}
+
+
+
+
 
 .game-menu {
   display: flex;
@@ -85,5 +114,6 @@ td {
   flex-direction: row;
   justify-content: space-around;
 }
+
 
 
