--- a/style.css
+++ b/style.css
@@ -22,13 +22,17 @@ main {
   top: 20%;
   left: 30%;
   z-index: 1;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: blue;
+  border: black 1px solid;
+  background-image: url("images/jeopardy.gif");
+}
 
+.input-player-name-title {
+  background-color: white;
 }
 
 .hidden {
@@ -42,23 +46,20 @@ main {
 }
 
 
-
-
-
 .game-menu {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-.start-game,
+.quit-game,
 .reset-game {
   font-size: 18px;
   padding: 2px;
 }
 
 .top-navigation-container {
-  background-color: #9d9171;
+  background-color: #060CE9;
   border-bottom: solid 1px black;
   display: flex;
   flex-direction: row;
@@ -73,15 +74,15 @@ main {
 }
 
 .game-instruction-container {
-  background-color: #AB4E68;
+  background-color: #060CE9;
 }
 
 .bottom-navigation-container {
-  background-color: #B07156;
+  background-color: #060CE9;
 }
 
 .title-game {
-  background-color: #c4a287;
+  background-color: #060CE9;
   font-size: 75px;
   height: 75px;
 
