--- a/style.css
+++ b/style.css
@@ -4,16 +4,11 @@
   padding: 0;
 }
 
-
-
-
 main {
   background-color: lightblue;
   display: grid;
   grid-template-rows: 1fr 6fr 1fr;
 }
-
-
 
 .start-screen {
   height: 500px;
@@ -45,6 +40,11 @@ main {
   margin: 5px;
 }
 
+.question-display {
+  background-color: #f6c348;
+  border: solid black 2px;
+  padding: 10px;
+}
 
 .game-menu {
   display: flex;
@@ -74,11 +74,16 @@ main {
 }
 
 .game-instruction-container {
-  background-color: #060CE9;
+  background-color: #f6c348;
+  padding: 15px;
+  margin: 5px;
 }
 
-.bottom-names-container {
+.question-answer-input,
+.submit-answer {
+  margin-left: 5px;
 }
+
 
 .title-game {
   background-color: #060CE9;
