--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ main {
 }
 
 .start-screen {
+  align-items: center;
+  background-color: blue;
   height: 500px;
   width: 500px;
   position: absolute;
@@ -20,8 +22,6 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: blue;
   border: black 1px solid;
   background-image: url("images/jeopardy.gif");
 }
@@ -84,17 +84,14 @@ main {
   margin-left: 5px;
 }
 
-
 .title-game {
   background-color: #060CE9;
   font-size: 75px;
   height: 75px;
-
 }
 
 .round-display {
   display: flex;
- /* flex-direction: column;*/
   justify-content: center;
   align-items: center;
 }
@@ -106,8 +103,7 @@ main {
 .game-question-table {
   width: 100%;
   height: 100%;
-/*  border: solid black 1px;
-*/}
+}
 
 tr, 
 td {
@@ -127,5 +123,3 @@ td {
   justify-content: center;
   align-items: center;
 }
-
-
