--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 main {
   background-color: lightblue;
   display: grid;
-  grid-template-rows: 1fr 6fr 1fr;
+  grid-template-rows: 100px 1fr 100px;
+  height: 100vh
 }
 
 .start-screen {
@@ -24,6 +25,8 @@ main {
   justify-content: center;
   border: black 1px solid;
   background-image: url("images/jeopardy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .input-player-name-title {
@@ -44,6 +47,8 @@ main {
   background-color: #f6c348;
   border: solid black 2px;
   padding: 10px;
+  text-align: center;
+  font-size: 25px;
 }
 
 .game-menu {
@@ -80,8 +85,10 @@ main {
 }
 
 .question-answer-input,
-.submit-answer {
-  margin-left: 5px;
+.submit-answer-button {
+  margin: 20px;
+  width: 150px;
+  height: 25px;
 }
 
 .title-game {
@@ -103,11 +110,13 @@ main {
 .game-question-table {
   width: 100%;
   height: 100%;
+  text-align: center;
 }
 
 tr, 
 td {
-  border: solid black 1px;
+  border: solid black 2px;
+  width: 25%;
 }
 
 .bottom-names-container {
